src/objects/Amr_Country_Cluster__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_RAP_Email__c</fullName>
        <label>Primary RAP Email</label>
        <type>Email</type>
    </fields>
    <label>Amr Country Cluster</label>
</CustomObject>